name:           sdl2-image
version:        2.0.1
synopsis:       Bindings to the SDL_image 2.0 library (version 2.0.1).
description:    ...
license:        MIT
license-file:   LICENSE
author:         ...
maintainer:     ...
copyright:      ..
category:       Graphics
build-type:     Simple
cabal-version:  >= 1.10

-- source-repository head
--   type:     git
--   location: https://github.com/haskell-game/sdl2.git


library
  ghc-options: -Wall
  exposed-modules:
    SDL.Image
    SDL.Image.General
    SDL.Image.Loading
    SDL.Image.Info
    --
    SDL.Image.Raw
    SDL.Image.Raw.General
    SDL.Image.Raw.Loading
    SDL.Image.Raw.Info
    SDL.Image.Raw.Enum
  default-language:
    Haskell2010
  hs-source-dirs:
    src/
  includes:
    SDL_image.h

  extra-libraries:
    SDL2_image

  pkgconfig-depends:
    SDL2_image >= 2.0.0

  build-depends:
    base           >= 4.7 && < 5,
    sdl2           >= 2.0,
    transformers
   --  bytestring >= 0.10.4.0 && < 0.11,
   --  exceptions >= 0.4 && < 0.9,
   --  linear >= 1.10.1.2 && < 1.21,
   --  StateVar >= 1.1.0.0 && < 1.2,
   --  text >= 1.1.0.0 && < 1.3,
   --  transformers >= 0.2 && < 0.5,
   --  vector >= 0.10.9.0 && < 0.12
--
executable main
   default-language: Haskell2010
   hs-source-dirs:   src
   main-is:          Main.hs
   build-depends: base             >= 4 && < 5
                , sdl2             >= 2.0
                , sdl2-image
                , transformers
                , linear
   ghc-options: -O2 -w
