name:           sdl2-image
version:        2.0.1
synopsis:       Bindings to the SDL_image 2.0 library (version 2.0.1).
description:    ...
license:        MIT
license-file:   LICENSE
author:         ...
maintainer:     ...
copyright:      ..
category:       Graphics
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type:     git
  location: https://github.com/jaiyalas/sdl2-image.git

library
  ghc-options: -Wall
  exposed-modules:
    SDL.Image
    SDL.Image.General
    SDL.Image.Loading
    SDL.Image.Info
    --
    SDL.Image.Raw
    SDL.Image.Raw.General
    SDL.Image.Raw.Loading
    SDL.Image.Raw.Info
    SDL.Image.Raw.Enum
  default-language:
    Haskell2010
  hs-source-dirs:
    src/
  includes:
    SDL_image.h
  extra-libraries:
    SDL2_image
  pkgconfig-depends:
    SDL2_image >= 2.0.0
  build-depends:
    base           >= 4.7 && < 5,
    sdl2           >= 2.0,
    transformers
--
